--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ django-crispy-forms==2.4
 crispy-tailwind==1.0.3
 Pillow==11.2.1
 python-dotenv==1.1.0
-django-allauth==0.65.7
+django-allauth
 django-channels==4.2.2
 channels-redis==4.2.1
 openai==1.75.0
