--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,10 @@ crispy-tailwind==1.0.3
 Pillow==11.2.1
 python-dotenv==1.1.0
 django-allauth
-django-channels==4.2.2
-channels-redis==4.2.1
+django-channels
+channels-redis
 openai==1.75.0
 openai==0.28
-redis==5.2.1
-asgiref==3.8.1
-channels==4.2.2 
+redis
+asgiref
+channels
