--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,7 @@ python-dotenv==1.1.0
 django-allauth
 django-channels
 channels-redis
-openai==1.75.0
-openai==0.28
+openai
 redis
 asgiref
 channels
